--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
+  "homepage":
+  "https://qqmmyy.github.io/heiheiehi/",
+  "scripts":{
+    "deploy":"gh-pages -d dist"
+  }
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
